Fixed scoreboard etc

--- a/DiceRolling/index.html
+++ b/DiceRolling/index.html
@@ -27,10 +27,12 @@
   <!-- Add your site or application content here -->
   <h1> Dice rolling Game!</h1>
   <button id="button0"> Roll Dice </button>
-  <p id="playerRollText">Player roll: NO RESULT</p>
-  <p id="aiRollText"> Ai Roll: NO RESULT</p>
+  <p id="playerRollText">Player roll: </p>
+  <p id="aiRollText"> Ai Roll: </p>
   <p id="result"> </p>
-
+  <p id="scoreboardPlayer"> </p>
+  <p id="scoreboardDraw"></p>
+  <p id="scoreboardAi"></p>
   <script src="js/app.js"></script>
 </body>
 
